# ChangeLog for app-admin/python-updater
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.33 2008/12/05 20:03:52 robbat2 Exp $

*python-updater-0.6-r1 (05 Dec 2008)

  05 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/python-updater-r133-custom-package-manager-command.patch,
  +python-updater-0.6-r1.ebuild:
  Bug #249891 - Add support for just calling another binary with the
  identical syntax to the package manager. Infra-requested feature, commit
  acked by hawking@gentoo.org.

*python-updater-0.6 (25 Aug 2008)

  25 Aug 2008; Ali Polatel <hawking@gentoo.org> -python-updater-0.3.ebuild,
  -python-updater-0.4.ebuild, +python-updater-0.6.ebuild:
  Version bump. Fixes bugs, #232467, #232761, #232860. Drop old.

  18 Jul 2008; Olivier Crête <tester@gentoo.org> python-updater-0.5.ebuild:
  Stable on amd64, bug #208902

  13 Jul 2008; Joseph Jezak <josejx@gentoo.org> python-updater-0.5.ebuild:
  Marked ppc stable for bug #208902.

  11 Jul 2008; Jeroen Roovers <jer@gentoo.org> python-updater-0.5.ebuild:
  Stable for HPPA (bug #208902).

  10 Jul 2008; Raúl Porcel <armin76@gentoo.org> python-updater-0.5.ebuild:
  alpha/ia64/sparc stable wrt #208902

  09 Jul 2008; Markus Rothe <corsair@gentoo.org> python-updater-0.5.ebuild:
  Stable on ppc64; bug #208902

  09 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  python-updater-0.5.ebuild:
  stable x86, bug 208902

*python-updater-0.5 (24 Jun 2008)

  24 Jun 2008; Ali Polatel <hawking@gentoo.org> +python-updater-0.5.ebuild:
  Version bump.

*python-updater-9999 (20 Jun 2008)

  20 Jun 2008; Ali Polatel <hawking@gentoo.org> +python-updater-9999.ebuild:
  Added scm ebuild for testing.

  24 Apr 2008; <ricmm@gentoo.org> python-updater-0.2.ebuild:
  Drop to ~mips due to unstable deps

*python-updater-0.4 (04 Jan 2008)

  04 Jan 2008; Ali Polatel <hawking@gentoo.org> +python-updater-0.4.ebuild: