@@ -2,10 +2,12 @@ AUX python-updater-r133-custom-package-manager-command.patch 1899 RMD160 c9fde8e
 DIST python-updater-0.2.bz2 2422 RMD160 4dc376f2df2dd9b814f2da0a9b2552de4376a073 SHA1 ef27d0661cc3f2ff0731a1ec370107e626eec18e SHA256 9ce7fb18051842d2f20de3ed19fdeabf937533e611219e68fde033ce3ebbab73
 DIST python-updater-0.5.tar.bz2 5489 RMD160 c10842c9eda650830518258c679ded43ac1ab6b1 SHA1 788abeff419cd6f72a2b95ff4b6ecafa840f2709 SHA256 cb69ac130162be9b7c33bd71574893cc4235e4d09b0ed844b9b87e382df96905
 DIST python-updater-0.6.tar.bz2 5657 RMD160 d89fc6a95f192cdaeab659000f2046ab2b7528af SHA1 e166306429be0b86266f5430f17ee762b2c60469 SHA256 aa34ef91bac1dac451e84a08628a902b23f6eb3e74e0daadff15c36dc3d99f86
+DIST python-updater-0.7.tar.bz2 6436 RMD160 e85d3bbfd87f640c1c540855126ccd85ff073340 SHA1 0286e9f6b41587e5cc837b19b90e51ab3a281595 SHA256 cfcd89b94ac9cb6929c808fe94a774d2e3922a48aefd8ead871bbbf4682dc686
 EBUILD python-updater-0.2.ebuild 702 RMD160 a77b7368e0f479237ee811b16f3932492043961d SHA1 89ee087c6157f54226b38d7607fb3c64c9020122 SHA256 7d105215e29ba73975c5738b2b860e04fba314c76fe0579e43ba2089a5be773e
 EBUILD python-updater-0.5.ebuild 790 RMD160 96e12fab9c64e79761fc880b9e57069ae766b3e6 SHA1 2987e7daced7f7cc3447b552875720f77bbf5b51 SHA256 28559faee61ec34410b5e35c388c040f4434882faf75ffea536e19b119690aad
 EBUILD python-updater-0.6-r1.ebuild 934 RMD160 568fcd1dd01c5ae98177f4e87696ba0b5a6b26d9 SHA1 6e386102e9c993e262060becc0b030b603b70ab0 SHA256 e4e644c296b9f39466753b3a5064353929203b95f6ba98581dbba11e007b3e73
 EBUILD python-updater-0.6.ebuild 803 RMD160 5bb43eb0dc13552538fee500be535b1513926470 SHA1 e74caf751c9d02d84e230325fef8559383d1a5bf SHA256 c54d2026de7b0562148b7e7f3bb9aec1c78f87a361b53bd3f62df88cd17d1ed0
+EBUILD python-updater-0.7.ebuild 804 RMD160 e83f22b37de8b0db1b637608e9be5023118df00d SHA1 da7cf23c94eb23acf2da45e0f2687e081b4de9f7 SHA256 7d6aa243c48a319876eb3a9f93f83485bdf0feda7a5ea560b612c027a797e804
 EBUILD python-updater-9999.ebuild 797 RMD160 baf577ebc6a0c8bcba37bc9850cf5d0c27d28a3e SHA1 7dfce5f3afc24f8bad5d7ca282acdebd0458b180 SHA256 96685de6730989b66c41bd27687c59e0d0dadcbb1111dae8181a2c872079f737
-MISC ChangeLog 4585 RMD160 fae9788643ddffb6da3a3cc3e5d33ab8b04a7b32 SHA1 828b2761815027885d3f6e8810eff55f16e59689 SHA256 56b6a57f1d5473e98d76406e2258db4f6729c703520f12de52a1bbf982399de6
+MISC ChangeLog 4741 RMD160 c02fbcc6fdf49edd697b97e9062e6510e6fac063 SHA1 5b9ccdd0749f3b4e9a00fdc9e9d3958a47200500 SHA256 2e73c90be0a41c9c244ab492c6614a730b590de993d246c9a5cab77198c57c37
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
