@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/python-updater
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.33 2008/12/05 20:03:52 robbat2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.34 2009/07/12 04:16:24 arfrever Exp $
+
+*python-updater-0.7 (12 Jul 2009)
+
+  12 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +python-updater-0.7.ebuild:
+  Version bump.
 
 *python-updater-0.6-r1 (05 Dec 2008)
 
